# vfd

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  STYLE.md  VISION.md
apps/fetch/: main.c  vfdfetch.desktop
apps/files/: main.c
apps/launcher/: main.c  shell.c  vfdlauncher.desktop  vfdshell.desktop
apps/lock/: Makefile  README.md  vfdlock
apps/lock/src/: vfdlock.c
apps/music/: Cargo.toml  LICENSE  README.md  vfdmusic.desktop
apps/music/src/: app.rs  color.rs  framebuffer.rs  main.rs  primitives.rs  theme.rs
apps/music/src/audio/: analyzer.rs  engine.rs  mod.rs
apps/music/src/display/: mod.rs  vfd.rs
apps/music/src/player/: state.rs
apps/music/src/playlists/: mod.rs
apps/music/src/widgets/: mod.rs  progress.rs  spectrum.rs  text.rs  text_font.in
apps/screenshot/: vfdshot  vfdshot.desktop
apps/settings/: main.c  vfdsettings.desktop
apps/terminal/: terminal.toml  vfdterm  vfdterm.desktop
apps/vfdbar/: main.c
apps/vfdd/: main.c  vfdctl.c
apps/wall/: main.c  vfdwall.desktop
config/fontconfig/: 99-vfd-fonts.conf
config/wall/: wall.ini
docs/: architecture.md  events.md  launcher.md  libui.md  protocol.md  settings.md  shell.md  terminal.md  wallpaper.md  widgets.md
include/vfd/: config.h  ipc.h  theme.h  ui.h  util.h  widgets.h
libs/libconfig/: config.c
libs/libipc/: ipc.c
libs/libtheme/: theme.c
libs/libui/: ui.c
libs/libutil/: util.c
libs/libvfdui/: Makefile  README.md  vfdui.pc
libs/libwidgets/: widgets.c
services/notifyd/: main.c  vfdnotify.desktop
themes/lain/: theme.ini
(+3 files in other folders)
