[package]
name = "vfdmusic"
version = "0.2.0"
edition = "2024"
description = "A lightweight local-first VFD music player for Linux"
license = "MIT"

[dependencies]
softbuffer = "0.4.8"
winit = "0.30.13"
rodio = { version = "0.22.2", features = ["playback", "symphonia-all"] }
rustfft = "6.4.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
